removing maditory dependancies as they fail the install on php7

--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
     }
   ],
   "require": {
-    "php": ">5.3",
-    "ext-soap": "*",
-    "ext-dom": "*"
+    "php": ">5.3"
   },
   "autoload": {
     "psr-4": {
